# khel.AI-video-player-using-ffmpeg

./: CMakeLists.txt  README.md  main.cpp
